Update readme with website link

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+    <h1>Press f12 to view console and see results</h1>
     <script src="rockPaperScissors.js">
     </script>
 </body>
